# NR-Scope-nrOccupancy

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  my.patch
lib/include/srsran/common/: band_helper.h  interfaces_common.h  phy_cfg_nr.h
lib/include/srsran/phy/agc/: agc.h
lib/include/srsran/phy/ch_estimation/: dmrs_pdcch.h  dmrs_sch.h
lib/include/srsran/phy/common/: phy_common.h  phy_common_nr.h
lib/include/srsran/phy/dft/: ofdm.h
lib/include/srsran/phy/phch/: dci_nr.h  pdcch_nr.h  prach.h  ra_dl_nr.h
lib/include/srsran/phy/ue/: ue_dl_nr.h  ue_sync_nr.h
lib/include/srsran/phy/utils/: vector.h
lib/include/srsran/radio/: radio.h  radio_dummy.h  radio_null.h  rf_buffer.h
lib/src/common/: band_helper.cc
lib/src/mac/: mac_rar_pdu_nr.cc
lib/src/phy/agc/: agc.c
lib/src/phy/ch_estimation/: dmrs_pdcch.c  dmrs_sch.c
lib/src/phy/common/: phy_common_nr.c
lib/src/phy/dft/: ofdm.c
lib/src/phy/mimo/: precoding.c
lib/src/phy/mimo/test/: precoder_test.c
lib/src/phy/phch/: dci_nr.c  pdcch_nr.c  pdsch_nr.c  prach.c  prach_tables.h  ra_dl_nr.c  ra_helper.h  ra_nr.c  ra_ul_nr.c  sch_nr.c
lib/src/phy/phch/test/: pdcch_test.c
lib/src/phy/resampling/: interp.c
lib/src/phy/rf/: rf_imp.c  rf_uhd_imp.cc
lib/src/phy/sync/: ssb.c
lib/src/phy/ue/: ue_cell_search.c  ue_dl_nr.c  ue_sync_nr.c
lib/src/phy/ue/test/: ue_sync_nr_test.c
lib/src/phy/utils/: vector.c
lib/src/radio/: radio.cc
nrscope/: CMakeLists.txt
nrscope/config/: config.yaml  config_100mhz.yaml  config_twinrx.yaml
nrscope/hdr/: asn_decoder.h  dci_decoder.h  harq_tracking.h  ip_address.h  load_config.h  nrscope_def.h  nrscope_logger.h  nrscope_worker.h  rach_decoder.h  radio_nr.h  sibs_decoder.h  task_scheduler.h  to_google.h
nrscope/src/: CMakeLists.txt  main.cc  scan_main.cc
nrscope/src/libs/: CMakeLists.txt  asn_decoder.c  dci_decoder.cc  harq_tracking.cc  ip_address.cc  load_config.cc  nrscope_def.cc  nrscope_logger.cc  nrscope_worker.cc  rach_decoder.cc  radio_nr.cc  sibs_decoder.cc  task_scheduler.cc  to_google.cc  to_google.py
nrscope/src/tests/: CMakeLists.txt  bigquery_table_create.py  google_client_cc_test.cc  google_client_test.cc  test_comm_path.cc
nrscope/twinrx_analysis/: srate_analysis.py  time_series_plot.py
srsenb/test/mac/: sched_ca_test.cc
srsue/: uensa.conf  uensa.conf.example  uesa.conf
srsue/hdr/phy/nr/: slot_sync.h
srsue/src/: main.cc  metrics_csv.cc  test_ue.cc
srsue/src/phy/: phy_nr_sa.cc  sync_sa.cc
srsue/src/phy/nr/: cell_search.cc  slot_sync.cc
srsue/src/phy/test/: gnb_rf_emulator.h  nr_cell_search_rf.cc  nr_cell_search_test.cc  nr_sa_cell_search_test.cc  ue_phy_test.cc
srsue/src/stack/rrc_nr/test/: ue_rrc_nr_test.cc
